[package]
name = "ere-sp1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true

# SP1 dependencies
sp1-sdk = { workspace = true, optional = true }

# Local dependencies
ere-compile-utils = { workspace = true, optional = true }
ere-zkvm-interface.workspace = true

# Cluster dependencies
prost.workspace = true
redis = { workspace = true, features = ["tokio-comp", "cluster-async"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tonic.workspace = true
ulid.workspace = true
zstd.workspace = true
# bincode 1.x for deserializing proofs from SP1 Cluster (cluster uses bincode 1.x)
bincode1 = { package = "bincode", version = "1.3" }

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true
tonic-build = "0.12"

[features]
default = ["compiler", "zkvm"]
compiler = ["dep:ere-compile-utils"]
zkvm = ["dep:sp1-sdk"]

[lints]
workspace = true
